0.2e
Bugfixes:
- Fixed a bug causing wierd velocity behaviour for Unstable TPC
- Fixed a memory leak related to Unstable TPC

0.2d

- Added Volkite battery

0.2c

- Added GH refit hulls

0.2b

- Added Atrapos

0.2a

- Added Nessie makeshift phase cruiser
- Added Bungelow cruiser carrier

0.2

- First semi-public release featuring a small number of ships


0.1

- Initial version